2009-11-11  Martin Smith  <msmith@trolltech.com>

        [Qt] doc: Changed Trolltech to Nokia

        * Api/qwebview.cpp:

2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=31323
        Fix a few compiler warnings

        * tests/qwebframe/tst_qwebframe.cpp: Add extra brackets 
        to make it explicit where the else case belongs

2009-11-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Fix enabling of software input panel when activating editable elements
        in QGraphicsWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::inputMethodEnabled): Implement method to
        query for input method support.
        * Api/qwebpage.cpp:
        (QWebPageWidgetClient::inputMethodEnabled): Ditto for QWidget.
        (QWebPagePrivate::handleSoftwareInputPanel): Don't use view() to
        test for input method support. Instead query using QWebPageClient
        and send the SIPR event to the ownerWidget() instead of the view().
        The latter is null for QGraphicsWebView.
        * tests/qwebpage/tst_qwebpage.cpp:
        (EventSpy::EventSpy):
        (EventSpy::eventFilter):
        (tst_QWebPage::inputMethods): Modify the test to verify that SIPR
        events are dispatched when activating focusable content.

2009-11-10  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed documentation fixes.

        Added a few improvements from Jocelyn Turcotte to the
        createWindow docs.

        * Api/qwebview.cpp:

2009-11-10  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed documentation fix.

        [Qt] Make qwebpage's createWindow not qwebview dependent.
        https://bugs.webkit.org/show_bug.cgi?id=30771

        Update documentation to make it clear that a reimplementation
        of the createWindow method of the associated QWebPage can